Fixes to java 17