@@ -1,15 +1,13 @@
 package application.security;
 
 import java.util.Arrays;
-
-import javax.servlet.http.HttpServletRequest;
+import java.util.List;
 
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
 
 @EnableWebSecurity
 @Configuration
@@ -30,23 +28,21 @@ public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
 	@Override
 	protected void configure(HttpSecurity http) throws Exception {
 		http
+			.headers().frameOptions().disable()
+			.and()
 			.csrf().disable()
 			.authorizeRequests()
 			.anyRequest()
 			.permitAll()
 			.and()
 			.httpBasic();
-		http.cors().configurationSource(new CorsConfigurationSource() {
-
-			@Override
-			public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
-				CorsConfiguration cors = new CorsConfiguration();
-				cors.setAllowedOrigins(Arrays.asList("*"));
-				cors.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-				cors.setAllowedHeaders(Arrays.asList("*"));
-				return cors;
-			}
-		});
+		http.cors().configurationSource(request -> {
+            CorsConfiguration cors = new CorsConfiguration();
+            cors.setAllowedOrigins(List.of("http://localhost:4200/"));
+            cors.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+            cors.setAllowedHeaders(List.of("*"));
+            return cors;
+        });
 	}
 	
 }
